--- a/personal_css/about.css
+++ b/personal_css/about.css
@@ -5,6 +5,15 @@
 }
 
 #about img{
-    width: 15rem;
     height: 23rem;
+}
+
+@media only screen and (max-width: 600px) {
+    #presentation{
+        height: 100%;
+    }
+
+    #about img{
+        height: 12rem;
+    }
 }
