--- a/personal_css/about.css
+++ b/personal_css/about.css
@@ -10,7 +10,7 @@
 
 @media only screen and (max-width: 600px) {
     #presentation{
-        height: 100%;
+        height: auto;
     }
 
     #about img{
