--- a/personal_css/index.css
+++ b/personal_css/index.css
@@ -1,8 +1,88 @@
+#carousel {
+    position: absolute;
+}
+
+#carousel img {
+    width: 100%;
+    height: 100%;
+}
+
 #about a {
     font-size: 1rem;
+}
+
+/* Hover Zoom */
+
+.hoverzoom {
+    position: relative;
+    width: 350px;
+    height: 277px;
+    overflow: hidden;
+}
+.hoverzoom img {
+    width: 100%; 
+    border-radius: 2px;
+    -webkit-transition: all .8s cubic-bezier(.190, 1.000, .220, 1.000);
+    -moz-transition: all .8s cubic-bezier(.190, 1.000, .220, 1.000);
+    -ms-transition: all .8s cubic-bezier(.190, 1.000, .220, 1.000);
+    -o-transition: all .8s cubic-bezier(.190, 1.000, .220, 1.000);
+    transition: all .8s cubic-bezier(.190, 1.000, .220, 1.000);
+}
+.hoverzoom:hover img {
+    -webkit-transform: scale(1.5);
+    -moz-transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    -o-transform: scale(1.5);
+    transform: scale(1.5);
+}
+.hoverzoom .retina{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;    
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.5);    
+    border-radius: 2px;
+    text-align: center;
+    padding: 30px;
+
+    -webkit-transition:	 all .8s cubic-bezier(.190, 1.000, .220, 1.000);
+    -moz-transition: all .8s cubic-bezier(.190, 1.000, .220, 1.000);
+    -ms-transition: all .8s cubic-bezier(.190, 1.000, .220, 1.000);
+    -o-transition: all .8s cubic-bezier(.190, 1.000, .220, 1.000);
+    transition: all .8s cubic-bezier(.190, 1.000, .220, 1.000); 
+}
+.hoverzoom:hover .retina {
+    opacity: 1;
+    box-shadow: inset 0 0 100px 50px rgba(0,0,0,.5); 
 }
 
 @font-face {
     font-family: "ananda";
     src: url(Ananda.ttf);
+}
+
+@media only screen and (max-width: 600px) {
+
+    .hoverzoom:visited img {
+        -webkit-transform: scale(1.5);
+        -moz-transform: scale(1.5);
+        -ms-transform: scale(1.5);
+        -o-transform: scale(1.5);
+        transform: scale(1.5);
+    }
+
+    .hoverzoom:visited .retina {
+        opacity: 1;
+        box-shadow: inset 0 0 100px 50px rgba(0,0,0,.5); 
+    }
+
+    #carousel{
+        height: 100%;
+    }
+
+    #about img{
+        height: 25rem;
+    }
 }
