Atualização de conteúdo e remoção de hr

--- a/personal_css/cardapio.css
+++ b/personal_css/cardapio.css
@@ -1,6 +1,6 @@
 #presentation{
     background-image: url(../images/novo_experimento.png);
-    
+    height: auto;
     background-attachment: fixed;
 }
 
