--- a/personal_css/global.css
+++ b/personal_css/global.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #F8FAFB;
+}
+
 h1 {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -5,6 +9,20 @@ h1 {
 nav a, i {
     font-size: 1.5rem;
 }
+
+footer {
+    background-color: #262930;
+}
+
+footer ul{
+list-style: none;
+}
+
+footer .rounded-circle {
+    width: 3rem;
+    height: 3rem;
+}
+
 
 .size-page {
     height: 100vh;
@@ -21,7 +39,6 @@ nav a, i {
 }
 
 .text-site {
-    /* color: #8BC34A; */
     background: -webkit-linear-gradient(#53BA4B, #92CD52);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -31,7 +48,17 @@ nav a, i {
     background: linear-gradient(-225deg, #53BA4B 100%, #92CD52 100%, #B6D857 100%);
 }
 
-.br-white-site {
+.text-pink-site {
+    background: -webkit-linear-gradient(#BB5E7E, #C27490);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.bg-pink-site {
+    background: linear-gradient(-225deg, #BB5E7E 100%, #C27490 100%, #C06F8C 100%);
+}
+
+.bg-white-site {
     background-color: #F8FAFB;
 }
 
@@ -97,10 +124,7 @@ nav a, i {
 }
 
 @media only screen and (max-width: 600px) {
-    hr {
-        width: 100%;
-        height: 1px;
-    }
+    
     #perfil img {
         width: 5rem;
         height: 8rem;
