--- a/personal_css/index.css
+++ b/personal_css/index.css
@@ -25,8 +25,8 @@
         height: 100vh;
     }
     #carousel img{
-        position: relative;
-        width: 4000px;
+        /* position: relative; */
+        width: initial;
     }
 
     #about img {
