--- a/personal_css/index.css
+++ b/personal_css/index.css
@@ -1,10 +1,7 @@
-#carousel {
-    position: absolute;
-}
-
-#carousel img {
-    width: 100%;
-    height: 100%;
+#presentation{
+    background-image: url(../images/novo_experimento.png);
+    background-attachment: fixed;
+    background-size: 100rem 50rem;
 }
 
 #about a {
@@ -21,12 +18,8 @@
 
 @media only screen and (max-width: 600px) {
 
-    #carousel {
-        height: 100vh;
-    }
-    #carousel img{
-        /* position: relative; */
-        width: initial;
+    #presentation{
+        height: auto;
     }
 
     #about img {
