--- a/personal_css/global.css
+++ b/personal_css/global.css
@@ -2,8 +2,12 @@ body{
     background-color: #F8FAFB;
 }
 
-h1 {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+h1, h2, h3 {
+font-family: Tommy;
+}
+
+ul{
+    font-family: Ndiscover;
 }
 
 nav a, i {
@@ -119,8 +123,13 @@ footer .rounded-circle {
 }
 
 @font-face {
-    font-family: "ananda";
-    src: url(Ananda.ttf);
+    font-family: "Ndiscover";
+    src: url(../fonts/Ndiscover.otf);
+}
+
+@font-face {
+    font-family: "Tommy";
+    src: url(../fonts/Tommy_soft.otf);
 }
 
 @media only screen and (max-width: 600px) {
