--- a/personal_css/global.css
+++ b/personal_css/global.css
@@ -22,6 +22,8 @@ footer ul {
     list-style: none;
 }
 
+/* Transition-site: START */
+
 .transition-site {
     background: linear-gradient(-225deg, #53BA4B 100%, #92CD52 100%, #B6D857 100%);
     color: white;
@@ -48,6 +50,9 @@ footer ul {
     color: white;
 }
 
+/* Transition-site: END */
+
+
 .rounded-circle {
     width: 3rem;
     height: 3rem;
@@ -58,14 +63,12 @@ footer ul {
     width: 100%;
 }
 
-.carousel-item {
-    height: 100vh;
-    background-attachment: fixed;
-}
-
 .col-inner {
     width: 100%;
 }
+
+
+/* Colors of site: START */
 
 .text-site {
     background: -webkit-linear-gradient(#53BA4B, #92CD52);
@@ -90,6 +93,12 @@ footer ul {
 .bg-white-site {
     background-color: #F8FAFB;
 }
+
+/* Colors of site: END */
+
+
+
+/* Nav-link-site: START */
 
 .nav-link-site:link, .nav-link-site:visited {
     color: #F8FAFB;
@@ -123,13 +132,8 @@ footer ul {
     -webkit-text-fill-color: transparent;
 }
 
-.navbar-toggler:link, .navbar-toggler:visited {
-    background: transparent;
-}
+/* Nav-link-site: END */
 
-.navbar-toggler:active {
-    background: #262930;
-}
 
 .levitate {
     position: relative;
@@ -147,7 +151,6 @@ footer ul {
     height: 14rem;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Nova+Round&display=swap');
 @media only screen and (max-width: 600px) {
     #perfil img {
         width: 5rem;
