--- a/personal_css/global.css
+++ b/personal_css/global.css
@@ -22,8 +22,19 @@ footer ul {
     list-style: none;
 }
 
-.hide{
+a{
+    color: inherit;
+}
+
+.hide {
     display: none;
+}
+
+.float-icon-site {
+    width: auto;
+    height: auto;
+    position: fixed;
+    z-index: 10000000;
 }
 
 /* Transition-site: START */
@@ -56,7 +67,6 @@ footer ul {
 
 /* Transition-site: END */
 
-
 .rounded-circle {
     width: 3rem;
     height: 3rem;
@@ -70,7 +80,6 @@ footer ul {
 .col-inner {
     width: 100%;
 }
-
 
 /* Colors of site: START */
 
@@ -99,8 +108,6 @@ footer ul {
 }
 
 /* Colors of site: END */
-
-
 
 /* Nav-link-site: START */
 
@@ -138,7 +145,6 @@ footer ul {
 
 /* Nav-link-site: END */
 
-
 .levitate {
     position: relative;
     top: 0;
@@ -155,13 +161,40 @@ footer ul {
     height: 14rem;
 }
 
+#configIcon {
+    border-radius: 100%;
+    bottom: 20%;
+    right: 1%;
+    padding: 1.2%;
+}
+
+#logoutIcon {
+    border-radius: 50%;
+    bottom: 2%;
+    right: 1%;
+    padding: 0.7%;
+}
+
 @media only screen and (max-width: 600px) {
-    #perfil img {
-        width: 5rem;
-        height: 8rem;
-    }
     .size-page {
         height: 600px;
         width: 100%;
+    }
+    .float-icon-site {
+        right: 2%;
+    }
+    #configIcon {
+        border-radius: 100%;
+        bottom: 15%;
+        padding: 4%;
+    }
+    #logoutIcon {
+        border-radius: 50%;
+        bottom: 2%;
+        padding: 2%;
+    }
+    #perfil img {
+        width: 5rem;
+        height: 8rem;
     }
 }
